--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install and build
         run: |
           npm install
-          npm run build
+          npm run docs:build
         env:
           CI: true
       # Deploy
