--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,8 @@ jobs:
           npm run docs:build
         env:
           CI: true
-      # Deploy
-      - name: Deploy
-        uses: easingthemes/ssh-deploy@v2.0.7
+      - name: vuepress-deploy
+        uses: IT4Change/vuepress-build-and-deploy@master
         env:
           SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
           ARGS: "-avz --delete"
