--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,33 +1,44 @@
-# deploy.yml
-name: deploy to huaweiyun
+name: docs
+
 on:
   push:
     branches:
       - master
+  # 手动触发部署
+  workflow_dispatch:
+
 jobs:
-  build:
+  docs:
     runs-on: ubuntu-latest
+
     steps:
-      # 读取仓库内容
-      - name: Checkout
-        uses: actions/checkout@v4
-      # 使用 node:20
-      - name: use Node.js 20
+      - uses: actions/checkout@v4
+        with:
+          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
+          fetch-depth: 0
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          # 选择要使用的 pnpm 版本
+          version: 8
+          # 使用 pnpm 安装依赖
+          run_install: true
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
+          # 选择要使用的 node 版本
           node-version: 20
-      # npm install
-      - name: npm install and build
-        run: |
-          npm install
-          npm i -D @vuepress/bundler-vite@next
-          # 安装 vuepress
-          npm i -D vuepress@next
-          # 安装 主题和打包工具
-          npm i -D vuepress-theme-plume @vuepress/bundler-vite@next
-          npm run docs:build
-        env:
-          CI: true
+          # 缓存 pnpm 依赖
+          cache: pnpm
+
+      # 运行构建脚本
+      - name: Build VuePress site
+        run: pnpm docs:build
+
+      # 查看 workflow 的文档来获取更多信息
+      # @see https://github.com/crazy-max/ghaction-github-pages
       - name: 部署到服务器
         uses: easingthemes/ssh-deploy@v2.1.1
         with:
