--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: docs
 
 on:
+  # trigger deployment on every push to main branch
   push:
-    branches:
-      - master
-  # 手动触发部署
+    branches: [master]
+  # trigger deployment manually
   workflow_dispatch:
 
 jobs:
@@ -14,31 +14,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
+          # fetch all commits to get last updated time or other git log info
           fetch-depth: 0
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+        uses: pnpm/action-setup@v2
         with:
-          # 选择要使用的 pnpm 版本
+          # choose pnpm version to use
           version: 8
-          # 使用 pnpm 安装依赖
+          # install deps with pnpm
           run_install: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          # 选择要使用的 node 版本
+          # choose node.js version to use
           node-version: 20
-          # 缓存 pnpm 依赖
+          # cache deps for pnpm
           cache: pnpm
 
-      # 运行构建脚本
+      # run build script
       - name: Build VuePress site
         run: pnpm docs:build
-
-      # 查看 workflow 的文档来获取更多信息
-      # @see https://github.com/crazy-max/ghaction-github-pages
       - name: 部署到服务器
         uses: easingthemes/ssh-deploy@v2.1.1
         with:
