--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,12 +17,10 @@ jobs:
           # fetch all commits to get last updated time or other git log info
           fetch-depth: 0
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+      - name: Setup npm
+        uses: npm/action-setup@v2
         with:
-          # choose pnpm version to use
-          version: 8
-          # install deps with pnpm
+          version: 10
           run_install: true
 
       - name: Setup Node.js
@@ -31,11 +29,11 @@ jobs:
           # choose node.js version to use
           node-version: 20
           # cache deps for pnpm
-          cache: pnpm
+          cache: npm
 
       # run build script
       - name: Build VuePress site
-        run: pnpm docs:build
+        run: npm docs:build
       - name: 部署到服务器
         uses: easingthemes/ssh-deploy@v2.1.1
         with:
