--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npm i -D vuepress@next
           npm i -D vuepress-theme-plume @vuepress/bundler-vite@next
-          npm docs:build
+          npm run docs:build
       - name: 部署到服务器
         uses: easingthemes/ssh-deploy@v2.1.1
         with:
