--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,22 @@ jobs:
           npm i -D vuepress-theme-plume @vuepress/bundler-vite@next
           npm run docs:build
       - name: 部署到服务器
-        uses: wlixcc/SFTP-Deploy-Action@v1.0
-        with:
-          username: 'root'   #ssh user name
-          server: '${{ secrets.REMOTE_HOST }}' #引用之前创建好的secret
-          ssh_private_key: ${{ secrets.ACCESS_TOKEN }} #引用之前创建好的secret
-          local_path: '.dist/'  # 对应我们项目build的文件夹路径
-          remote_path: '/home/uiiiii'
+        uses: easingthemes/ssh-deploy@latest  # 使用最新的ssh-deploy action
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}  # 在GitHub仓库的Secrets中设置的SSH私钥
+          ARGS: '-avzr --delete'
+          SOURCE: 'dist/'  # VuePress 2构建输出的目录
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}  # 云主机的IP地址或域名
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}  # 云主机的用户名
+          TARGET: ${{ secrets.TARGET }}  # 云主机上存放VuePress 2站点的目录
+
 #
-#
+# with:
+#              SSH_PRIVATE_KEY: ${{ secrets.ACCESS_TOKEN }}
+#              ## 复制操作的参数。"-avzr --delete"意味部署时清空服务器目标目录下的文件
+#              ARGS: "-rlgoDzvc -i --delete"
+#              SOURCE: "dist/"
+#              REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+#              REMOTE_USER: ${{ secrets.REMOTE_USER }}
+#              TARGET: ${{ secrets.TARGET }}
+#              EXCLUDE: "/dist/, /node_modules/"
